cli/tests/lit/import-clause-or-module-specifier-missing.lit
// Test parsing import statements
// RUN: @parser @file

import
// CHECK: Parse error: Declaration or statement expected.
